new-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  creationTimestamp: null
  name: new-version
  annotations: 
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-weight: "10"
spec:
  rules:
  - host: theapp.info
    http:
      paths:
      - backend:
          service:
            name: new-nginx
            port:
              number: 80
        path: /
        pathType: Exact
status:
  loadBalancer: {}
